fixed routes for /orders overlapping with backend

--- a/client/src/Components/App.css
+++ b/client/src/Components/App.css
@@ -136,3 +136,18 @@
   color: white;
 }
 
+/* special button
+ */
+
+ .buttonS{
+  background-color: #e41313; 
+  color: rgb(255, 255, 255);
+  padding: 1px 1px;
+}
+.buttonS {
+  transition-duration: 0.4s;
+}
+.buttonS:hover {
+  background-color: #12181b; /* Green */
+  color: white;
+}
